--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,17 @@
+body{
+    margin: 0;
+    
+}
+
+
+.navbar{
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
 .header{
+    
     background-image: url(img/bmw_home02.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -6,20 +19,68 @@
     height: 700px
 }
 
-.header__icon{
-    max-width: 25px;
-    max-height: 25px;
+.navbar__lista{
+    display: flex;
+
 }
 
-.header__right{
+
+ul li{
+    list-style: none;
+    padding: 20px;
+    cursor:pointer
+}
+
+ul li a{
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: white;
+}
+
+
+
+.navbar__right{
     display: flex;
-    align-items: end;
-    justify-content: space-around;
-    max-width: 300px;
+    justify-content: space-between;
+}
 
+.header__icon{
+    max-width: 35px;
+    max-height: 20px;
+    padding: 30px 15px;
+}
 
+.header__icon--logo{
+    max-width: 85px;
+    max-height: 55px;
+    padding: 15px 30px;
+}
+
+.titulo{
+    display: flex;
+    flex-direction: column;
+    align-self: flex-end;
+    
+    
+    
     
 }
-.yoquese{
+
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: white;
+}
+
+p{
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+
+button{
+    background-color: #3576d9;
+    color: white;
+    width: 15%;
+    height: 80%;
 
 }
