--- a/styles.css
+++ b/styles.css
@@ -4,20 +4,29 @@ body{
 }
 
 
-.navbar{
-    display: flex;
-    justify-content: space-evenly;
-
-}
-
 .header{
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     background-image: url(img/bmw_home02.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
     background-position: center center;
-    height: 700px
+    height: 100vh;
 }
+
+.header_top{
+    display:flex;
+    justify-content: space-around;       
+}
+
+.header_bottom{
+    margin-bottom: 60px;
+    padding-left: 5%;
+}
+
+
+
 
 .navbar__lista{
     display: flex;
@@ -78,9 +87,13 @@ p{
 }
 
 button{
-    background-color: #3576d9;
+    font-family: Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 90%;
+    background-color: #1c64d4;
+    border: none;
     color: white;
-    width: 15%;
-    height: 80%;
+    width: 10%;
+    height: 30%;
 
 }
