--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,10 @@ ul li{
 
 ul li a{
     font-family: Arial, Helvetica, sans-serif;
+    font-weight:600;
     text-decoration: none;
     color: white;
+
 }
 
 
@@ -67,14 +69,16 @@ ul li a{
     padding: 15px 30px;
 }
 
-.titulo{
-    display: flex;
-    flex-direction: column;
-    align-self: flex-end;
-    
-    
-    
-    
+
+.linea__header{
+    border: 0.5px solid white;
+    position: absolute;
+    width: 1100px;
+    right: 200px;
+    top:100px;
+    opacity: 0.5;
+   
+
 }
 
 h1{
