--- a/styles.css
+++ b/styles.css
@@ -73,8 +73,8 @@ ul li a{
 .linea__header{
     border: 0.5px solid white;
     position: absolute;
-    width: 1100px;
-    right: 200px;
+    width: 71vw;
+    right: 17vw;
     top:100px;
     opacity: 0.5;
    
